It works so far, more tests to add

--- a/htdocs/form.html
+++ b/htdocs/form.html
@@ -6,7 +6,7 @@
         <form action="add-subscriber.php" method="post">
             <input type="text" name="email" placeholder="Email">
             <input type="submit" value="Submit">
-            <!--input type="hidden" name="tags" value="tag1"-->
+            <input type="hidden" name="tags" value="tag1,tag2">
             <input type="hidden" name="redirect-to" value="http://localhost:8080/welcome.html">
         </form>
     </body>
