Make script names more specific

--- a/htdocs/sample-form.html
+++ b/htdocs/sample-form.html
@@ -72,7 +72,7 @@
             });
         });
     </script>
-    <form action="add-contact.php" method="post" accept-charset="UTF-8">
+    <form action="add-systeme-io-contact.php" method="post" accept-charset="UTF-8">
         <input type="text" name="first_name" placeholder="What should I call you?">
         <input type="text" name="email" placeholder="Email">
         <input type="submit" value="Submit" disabled>
