--- a/htdocs/sample-form.html
+++ b/htdocs/sample-form.html
@@ -49,7 +49,7 @@
 
 
 <!-- Put this in as many places as you like -->
-<form action="add-systeme-io-contact.php" method="post" accept-charset="UTF-8">
+<form action="/add-systeme-io-contact.php" method="post" accept-charset="UTF-8">
     <input type="text" name="first_name" autocomplete="given-name" placeholder="What should I call you?"
         oninput="validateAddContactForm(event)">
     <input type="text" name="last_name" autocomplete="family-name" placeholder="What is your last name"
